# my_first_opengl

./: CMakeLists.txt
common/: quaternion_utils.cpp
includes/glad/: glad.h
resources/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
src/: constants.cpp  main.cpp
src/glad/: glad.c
